Updated Index.html and Index.css to meet MVP for home page.

--- a/css/index.css
+++ b/css/index.css
@@ -71,6 +71,37 @@ p {
     margin: 0 auto;
 }
 
+.container .nav-header {
+    display: flex;
+    align-content: stretch;
+	}
+
+.container .nav-header nav {
+	display: flex;
+    justify-content: space-between;
+    align-content: center;
+    }
+
+
+
+header nav a {
+	padding: 15px;
+	margin: 25px 40px 0 0;
+    text-decoration: none;
+    font-size: 18px;
+    font-family: 'Rubik', sans-serif;
+    color: black;
+    }
+
+.logo{
+	width: 150px;
+	height: 80px;
+	margin: 25px 50px 0 0px;
+	background-image: url("../img/lambda-black.png");
+    background-size: 150px 40px;
+    background-repeat: no-repeat;
+	}
+
 .top-content {
     display: flex;
     flex-wrap: wrap;
@@ -83,7 +114,8 @@ p {
     width: 48%;
     padding: 0 1%;
     padding-bottom: 20px;  
-}
+    margin-top: 25px;
+    }
 
 .middle-content {
     margin-bottom: 20px;
@@ -110,6 +142,56 @@ p {
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+.middle-content .boxes .box:nth-child(1) {
+    color: white;
+    background: teal;
+}
+
+.middle-content .boxes .box:nth-child(2) {
+    color: white;
+    background: gold;
+}
+
+.middle-content .boxes .box:nth-child(3) {
+    color: white;
+    background: cadetblue;
+}
+
+.middle-content .boxes .box:nth-child(4) {
+    color: white;
+    background: coral;
+}
+
+.middle-content .boxes .box:nth-child(5) {
+    color: white;
+    background: crimson;
+}
+
+.middle-content .boxes .box:nth-child(6) {
+    color: white;
+    background: forestgreen;
+}
+
+.middle-content .boxes .box:nth-child(7) {
+    color: white;
+    background: darkorchid;
+}
+
+.middle-content .boxes .box:nth-child(8) {
+    color: white;
+    background: hotpink;
+}
+
+.middle-content .boxes .box:nth-child(9) {
+    color: white;
+    background: indigo;
+}
+
+.middle-content .boxes .box:nth-child(10) {
+    color: white;
+    background: dodgerblue;
 }
 
 .bottom-content {
