--- a/css/index.css
+++ b/css/index.css
@@ -226,3 +226,64 @@ footer nav a {
     color: white;
     text-decoration: none;
 }
+
+.container .about-banner {
+    margin-bottom: 25px;
+}
+
+.container .top-container {
+    margin-bottom: 25px;
+    border-bottom: 1px dashed grey;
+}
+
+.container .top-container p {
+    margin-bottom: 25px;
+}
+
+.container .middle-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.container .middle-container .about-box {
+    display: flex;
+    flex-direction: column;
+    width: 47%;
+    padding: 10px;
+    margin: 0 10px;
+    border-bottom: 1px dashed black;
+}
+
+.container .middle-container .about-box:last-child {
+    margin-top: 25px;
+    border-bottom: 1px dashed grey;
+}
+
+.container .middle-container .about-box:nth-last-child(2) {
+    margin-top: 25px;
+    border-bottom: 1px dashed grey;
+}
+
+.container .middle-container .about-box h2 {
+    margin-top: 15px;
+}
+
+.container .middle-container .about-box .learn-more {
+    display: flex;
+    justify-content: center;
+    align-content: stretch;
+	color: black;	
+	width: 120px;
+	height: 40px; 
+    text-decoration: none;
+	padding-top: 10px;
+	margin: 20px 0;
+    border: 1.2px solid black;
+    border-radius: 10px;
+}
+
+.container .bottom-container {
+    margin: 30px 0 30px 10px;
+    padding: 15px
+}
